# DataStructures

./: CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/all_matrix_doctest/: CMakeLists.txt  all_matrix_doctest.cpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h
prj.lab/complex_doctest/: CMakeLists.txt  complex_doctest.cpp
prj.lab/complex_test/: complex_test.cpp
prj.lab/matrixdr/: CMakeLists.txt  matrixdr.cpp  matrixdr.h
prj.lab/matrixds/: CMakeLists.txt  matrixds.cpp  matrixds.h
prj.lab/matrixlr/: CMakeLists.txt  matrixlr.cpp  matrixlr.h
prj.lab/matrixls/: CMakeLists.txt  matrixls.cpp  matrixls.h
prj.lab/matrixvr/: CMakeLists.txt  matrixvr.cpp  matrixvr.h
prj.lab/matrixvs/: CMakeLists.txt  matrixvs.cpp  matrixvs.h
prj.lab/queuea/: CMakeLists.txt  queuea.cpp  queuea.h
prj.lab/queuea_doctest/: CMakeLists.txt  queuea_doctest.cpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h
prj.lab/rational_test/: CMakeLists.txt  rational_test.cpp
prj.lab/simple_progs/: CMakeLists.txt  Task_2_1.cpp  Task_2_2.cpp
prj.lab/stackl/: CMakeLists.txt  stackl.cpp  stackl.h
prj.lab/stackl_doctest/: CMakeLists.txt  stackl_doctest.cpp
