add_subdirectory(simple_progs)
add_subdirectory(all_matrix_doctest)

add_subdirectory(complex)
add_subdirectory(complex_test)
add_subdirectory(complex_doctest)
add_subdirectory(rational)
add_subdirectory(rational_test)

add_subdirectory(matrixvs)
add_subdirectory(matrixds)
add_subdirectory(matrixls)
add_subdirectory(matrixvr)
add_subdirectory(matrixdr)
add_subdirectory(matrixlr)

add_subdirectory(queuea)
add_subdirectory(queuea_doctest)
add_subdirectory(stackl)
add_subdirectory(stackl_doctest)